fix: adjust margin-right for improved layout alignment

--- a/src/styling/myurls.css
+++ b/src/styling/myurls.css
@@ -482,6 +482,6 @@ h2, h3{
         width: 100%;
         height: auto;
         display: block;
-        margin-right: 40px;
+        margin-right: 50px;
     }
 }
